--- a/mytestpub/income-history.html
+++ b/mytestpub/income-history.html
@@ -191,6 +191,6 @@
   <script type="module" src="income-control.js"></script>
   <script type="module" src="./income-history.js"></script>
   <script type="module" src="income-control.js"></script>
-
+<script type="module" src="./test-history.js"></script>
 </body>
 </html>
