--- a/mytestpub/admin.html
+++ b/mytestpub/admin.html
@@ -246,6 +246,7 @@
       .user-search-row{flex-direction:column;align-items:flex-start;}
     }
   </style>
+
 </head>
 <body>
   <div class="shell">
@@ -511,6 +512,12 @@
                       onclick="distributeGlobalBonus()">
                 Distribute Global Bonus
               </button>
+               <button type="button"
+                class="btn-save"
+                style="background:linear-gradient(135deg,#f97316,#ec4899);color:#111827;"
+                onclick="runBinaryForAll()">
+                Run Binary Matching
+              </button>
             </div>
 
             <p id="globalStatus" class="note"></p>
@@ -634,18 +641,10 @@
       </div>
     </section>
   </div>
-
-  <!-- Firebase config -->
-  <script type="module" src="firebase-config.js"></script>
-
-  <!-- Admin panel logic -->
-  <script type="module" src="admin.js"></script>
-
-  <!-- ROI engine – runROIForAll() -->
-  <script type="module" src="roi-engine.js"></script>
-
-  <!-- Global sales bonus logic – refreshGlobalSummary() + distributeGlobalBonus() -->
-  <script type="module" src="global-bonus.js"></script>
-  <script type="module" src="rank-engine.js"></script>
+<script type="module" src="firebase-config.js"></script>
+<script type="module" src="admin.js"></script>
+<script type="module" src="roi-engine.js"></script>
+<script type="module" src="global-bonus.js"></script>
+<script type="module" src="rank-engine.js"></script>
 </body>
 </html>
